# oop-2025

./: .gitignore  README.md  pyproject.toml
oop_2025/basics/: a.py  basic_interfaces.py  basics_oop.py  events_dataclass.py  simple_dataclasses.py  structural_code.py
oop_2025/events/: basic.py  list_remove_timing.py
oop_2025/monitoring/: net_.py
oop_2025/payments/: a.py  bank_errors.py  financials.py  us_financials.py
oop_2025/psi_ai/: a.py  basics_of_pydantic.py  baustelle_1.py  description.md  model.py  perplexity_model.py
oop_2025/watercooling/: a.py  affectors.py  controller.py  designs.md  sensors.py  strategy_design.py  strategy_tests.py  temp_sensor_plugins.py
oop_2025/watercooling/experimental/: a.py  example1_amd.txt  example2_intel.txt  example3_amd.txt  example4_intel.txt  example5_intel.txt  examples6_amd.txt  experimental_flow_1.txt  http_flow_sensor.txt
tests/: bank_tests.py  cooling_tests.py  first_test.py
